# pangi-ecosystem

./: .env.devnet.example  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .security-verification-last-run  ANTI_BOT_MEASURES.md  Anchor.toml  BACKUP_STRATEGY.md  BOOTSTRAP_PLAN.md  CATH_DISTRIBUTION_PLAN.md  CATH_INTEGRATION.md  CATH_TOKENOMICS.md  CODE_OF_CONDUCT.md  COMPLETE_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEVNET_RUNBOOK.md  DEVNET_SETUP.md  DEVNET_TESTING.md  DEV_SERVER_STATUS.md  DOCUMENTATION_INDEX.md  DUAL_TOKEN_MODEL.md  EARLY_UNLOCK_TEST_PLAN.md  GET_TEST_TOKENS.md  GITHUB_BEST_PRACTICES.md  GIT_GUIDE.md  IDL_ISSUE.md  LICENSE  MASTER_GUARDIAN_SECURITY_ANALYSIS.md  MASTER_GUARDIAN_SYSTEM.md  MULTISIG_ENHANCEMENT.md  NFT_COLLECTION_STRUCTURE.md  NFT_IMPLEMENTATION_GUIDE.md  NFT_SMART_CONTRACT_SPEC.md  NFT_UNLOCK_SYSTEM.md  OBSIDIAN_CLAW_COLLECTION.md  Obsidian_Claw_Traits.csv  PANGI_ArtBrief.md  PANGI_SYSTEM_OVERVIEW.md  (+34 more)
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
docs/: ADMIN_SECURITY_DASHBOARD.md  ANCHOR_DEPENDENCY_STATUS.md  ANCHOR_FIX_CHECK_RESULTS.md  APP_DEVELOPMENT_STATUS.md  BUILD_DEPLOY_TEST_RESULTS.md  CLAIM_REWARDS_SECURITY_REVIEW.md  DEBUGGING_PROCESS.md  DEPENDENCY_ISSUE.md  FRONTEND_DEVELOPMENT_PLAN.md  IDL_FIX_SUMMARY.md  IDL_TROUBLESHOOTING_GUIDE.md  IMMEDIATE_NEXT_STEPS.md  NFT_SAFE_MATH_REVIEW.md  NFT_TIMELOCK_SECURITY_REVIEW.md  RATE_LIMITING_SECURITY_REVIEW.md  README.md  README_SECURITY.md  (+18 more)
programs/pangi-token/: Cargo.toml
programs/pangi-token/src/: lib.rs
(+115 files in other folders)
