[workspace]
members = [
    "programs/pangi-token",
    "programs/pangi-vault",
    "programs/pangi-nft",
    "programs/special-distribution"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
