[package]
name = "pangi-token"
version = "0.1.0"
description = "PANGI Token Program with Dynamic Tax System"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pangi_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
spl-token = "4.0"
